[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Attacks/AreaEffectImage/Image1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Scripts/Attacks/SwordSwingAttack.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/AttackSounds/SwingingSword.wav" type="AudioStream" id=3]

[node name="SwordSwingAttack" type="Area2D" groups=[
"Attack",
]]
position = Vector2( -0.418121, 0.418121 )
z_index = -1
script = ExtResource( 2 )

[node name="AttackingArea" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 1 )
build_mode = 1
polygon = PoolVector2Array( -31.1834, -57.7385, 27.5598, -0.350925, 29.401, 1.75993, -32.006, 60.06, -34.5147, 56.2969, 1.4436, -0.985535, -33.6785, -54.923 )

[node name="WeaponImage" type="Sprite" parent="."]
position = Vector2( 2.25623, 0 )
scale = Vector2( 0.541022, 0.5 )
texture = ExtResource( 1 )

[node name="SwordSwingAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 0.3
[connection signal="area_entered" from="." to="." method="_on_SwordSwingAttack_area_entered"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_DisappearTimer_timeout"]
